# Mp2tClip

./: .gitignore  CMakeLists.txt  CommandLineParser.cpp  Mpeg2TsDecoder.cpp  PmtProxy.cpp  PmtProxy.h  README.md  VideoDecoder.cpp  main.cpp
Mp2tClipImpl/: CMakeLists.txt
Mp2tClipImpl/include/Mp2tClipImpl/: Clipper.h
Mp2tClipImpl/src/: AccessUnit.cpp  AccessUnit.h  Clipper.cpp  CommandLineParser.cpp  Monitor.cpp  Mpeg2TsDecoder.cpp  Mpeg2TsDecoder.h  PmtProxy.cpp  PmtProxy.h  VideoDecoder.cpp  VideoDecoder.h
src/: .gitignore  AccessUnit.cpp  AccessUnit.h  CMakeLists.txt  CMakeSettings.json  Clipper.cpp  Clipper.h  CommandLineParser.cpp  CommandLineParser.h  Monitor.cpp  Monitor.h  Mpeg2TsDecoder.cpp  Mpeg2TsDecoder.h  VideoDecoder.cpp  VideoDecoder.h  main.cpp
